--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ljud"
-version = "0.0.1-alpha.1"
+version = "0.0.2"
 edition = "2021"
 keywords = [
 	"audio",
@@ -11,14 +11,13 @@ keywords = [
 ]
 readme = "README.md"
 license-file = "LICENSE"
-description = "Music DSP library written in Rust with a focus on performance and flexibility."
+description = "Graph-based music DSP library with a focus on flexibility."
 repository = "https://github.com/chaosprint/ljud.git"
 authors = ["Qichao Lan <chaosprint@gmail.com>"]
 
 [[bench]]
 name = "fm"
 harness = false
-
 
 [dev-dependencies]
 cpal = "0.15.2"
