--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,10 @@ anyhow = "1.0.70"
 smallvec = { version = "1.10.0" }
 hashbrown = { version = "0.13.2" }
 libm = { version = "0.2.5", optional = true }
+hound = { verison = "3.5.0", optional = true }
+gnuplot = "*"
 
 [features]
-default = []
+default = ["sampler"]
+sampler = ["hound"]
 no_std = ["libm"]
