--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,9 +27,9 @@ anyhow = "1.0.70"
 [dependencies]
 smallvec = { version = "1.10.0" }
 hashbrown = { version = "0.13.2" }
+hound = { version = "3.5.0", optional = true }
 libm = { version = "0.2.5", optional = true }
-hound = { verison = "3.5.0", optional = true }
-gnuplot = "*"
+# gnuplot = "*"
 
 [features]
 default = ["sampler"]
