--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,9 @@ hashbrown = { version = "0.13.2" }
 hound = { version = "3.5.0", optional = true }
 libm = { version = "0.2.5", optional = true }
 gnuplot = { version = "0.0.37", optional = true } 
+tokio = { version = "1.28.0", features = ["full"] }
+walkdir = "2.3.3"
+
 
 [features]
 # default = []
